--- a/Load/src/main/res/layout/loading_default.xml
+++ b/Load/src/main/res/layout/loading_default.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -8,10 +8,11 @@
               android:orientation="vertical"
     >
     <ProgressBar
+        android:id="@+id/pb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateDrawable="@anim/rotate_loading"
         android:indeterminateDuration="900"
         />
-</LinearLayout>
+</FrameLayout>
