--- a/Load/src/main/res/values/styles.xml
+++ b/Load/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- 对话框-->
-    <style name="Theme_dialog" parent="@android:style/Theme.Dialog">
+    <style name="LoadStyle" parent="@android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
         <item name="android:background">@android:color/transparent</item> <!-- 设置自定义布局的背景透明 -->
         <item name="android:windowBackground">@android:color/transparent</item>  <!-- 设置window背景透明，也就是去边框 -->
