--- a/Load/src/main/res/values/color.xml
+++ b/Load/src/main/res/values/color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="c177bbd">#177bbd</color>
+<color name="c177bbd">#6B177BBD</color>
 <color name="cffff0000">#ffff0000</color>
 </resources>
