--- a/Load/src/main/res/values/styles.xml
+++ b/Load/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- 对话框-->
     <style name="LoadStyle" parent="@android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:background">@android:color/transparent</item> <!-- 设置自定义布局的背景透明 -->
+        <item name="android:background">@color/c177bbd</item> <!-- 设置自定义布局的背景透明 -->
         <item name="android:windowBackground">@android:color/transparent</item>  <!-- 设置window背景透明，也就是去边框 -->
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
