--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,303 +12,12 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="load全局默认设置(点击下面的颜色框设置颜色)"
-            android:textColor="@color/colorAccent" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:text="load图片默认颜色" />
-
-                <TextView
-                    android:id="@+id/tvLoadColor"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/view_border"
-                    android:text="" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:text="load背景默认颜色" />
-
-                <TextView
-                    android:id="@+id/tvLoadBgColor"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/view_border"
-                    android:text="" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="dialog背景透明度" />
-
-            <android.support.v7.widget.AppCompatSeekBar
-                android:id="@+id/sbAlpha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:max="100"
-                android:progress="30" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/cbCancelOut"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="点击外部取消dialog" />
-
-            <CheckBox
-                android:id="@+id/cbFinishExit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="dismiss退出act" />
-        </LinearLayout>
-
-        <RadioGroup
-            android:id="@+id/rgFirst"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.AppCompatRadioButton
-                android:id="@+id/rbFirst"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="选择第一个load图片" />
-
-            <android.support.v7.widget.AppCompatRadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="选择第二个load图片" />
-        </RadioGroup>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/loading_default" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/load2" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:text="load局部设置"
-            android:textColor="@color/colorAccent" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:text="load图片默认颜色" />
-
-                <TextView
-                    android:id="@+id/tvLoadColor2"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/view_border"
-                    android:text="" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:text="load背景默认颜色" />
-
-                <TextView
-                    android:id="@+id/tvLoadBgColor2"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/view_border"
-                    android:text="" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="dialog背景透明度" />
-
-            <android.support.v7.widget.AppCompatSeekBar
-                android:id="@+id/sbAlpha2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:max="100"
-                android:progress="30" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/cbCancelOut2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="点击外部取消dialog" />
-
-            <CheckBox
-                android:id="@+id/cbFinishExit2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="dismiss退出act" />
-        </LinearLayout>
-
-        <RadioGroup
-            android:id="@+id/rgFirst2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.AppCompatRadioButton
-                android:id="@+id/rbFirst2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="选择第一个load图片" />
-
-            <android.support.v7.widget.AppCompatRadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="选择第二个load图片" />
-        </RadioGroup>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/loading_default" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/load2" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.AppCompatCheckBox
-                android:id="@+id/cbAllSet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="全局默认设置" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="局部优先级高于全局" />
-
-            <android.support.v7.widget.AppCompatCheckBox
-                android:id="@+id/cbAreaSet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="局部默认设置" />
-        </LinearLayout>
-
         <Button
             android:id="@+id/btShow"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="show"
+            android:gravity="center"
             android:textAllCaps="false" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
