--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,22 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="LoadStyleTest" parent="@android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/holo_red_dark</item> <!-- 设置自定义布局的背景透明 -->
+        <item name="android:windowBackground">@color/colorPrimary</item>  <!-- 设置window背景透明，也就是去边框 -->
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">true</item><!-- 设置遮罩层 -->
+        <item name="android:backgroundDimAmount">0.3</item><!-- 设置遮罩层透明度 -->
+    </style>
+
+    <style name="TestDialogAnim" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/dialog_enter</item>
+        <item name="android:windowExitAnimation">@anim/dialog_exit</item>
+
+    </style>
+
+
 </resources>
